common-applications/freesky-icsl-hk-cluster/modelfoundry-usercenter-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: modelfoundry-usercenter-website-icsl
  name: modelfoundry-usercenter-website-icsl
