common-applications/freesky-icsl-hk-cluster/modelfoundry-usercenter-website/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  namespace: modelfoundry-usercenter-website-icsl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: website
    spec:
      tolerations:
      - key: "icsl"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/gitea/modelfoundry-usercenter-website:test-51e375
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 20
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        name: website
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 500m
            memory: 500Mi
